配置文件构建，解析

--- a/index.html
+++ b/index.html
@@ -79,18 +79,9 @@
 		</table>
 		</div>
 		<div class="table-content" id="b">
-			<table id="id">
-			<tr>
-				<th class = "number">序号</th>
-				<th>姓名</th>
-				<th class = "sex">性别</th>
-				<th>部门</th>
-				<th class = "date">入社时间</th>
-				<th class="operation">操作</th>
-			</tr>
-			</table>
+			
 		</div>
-		<div class="table-content"  id="b">
+		<div class="table-content" id="c">
 			
 		</div>
 	</body>
@@ -98,6 +89,7 @@
 	<script type="text/javascript" src="base/js.js" ></script>
 	<!--<script type="text/javascript" src="js.js" ></script>-->
 	<script type="text/javascript">
-		
+		var url = 'base/base.json';
+		init(url);
 	</script>
 </html>
