--- a/index.html
+++ b/index.html
@@ -78,12 +78,8 @@
 			</tr>
 		</table>
 		</div>
-		<div class="table-content" id="b">
-			
-		</div>
-		<div class="table-content" id="c">
-			
-		</div>
+		<div class="table-content" id="b"></div>
+		<div class="table-content" id="c"></div>
 	</body>
 	<script type="text/javascript" src="base/ajax.js" ></script>
 	<script type="text/javascript" src="base/js.js" ></script>
